--- a/addUser_JavaScript_Mini_Project/css/style.css
+++ b/addUser_JavaScript_Mini_Project/css/style.css
@@ -4,11 +4,23 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #425F57;
+}
+
 .container {
     width: 30%;
     margin: 10rem auto;
-    border: 1px solid black;
     padding: 3rem 2rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 5px;
+    background-color: #fff;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 1rem;
+    color: #425F57;
 }
 
 .form-control {
@@ -17,7 +29,8 @@
 }
 
 .form-control label {
-    margin-bottom: 0.5rem
+    margin-bottom: 0.5rem;
+    color: red;
 }
 
 .form-control input {
@@ -27,7 +40,7 @@
 
 button {
     width: 100%;
-    background-color: #38E54D;
+    background-color: #425F57;
     padding: 0.5rem;
     font-size: 1rem;
     border: none;
@@ -42,7 +55,7 @@ button {
 
 p {
     text-align: center;
-    color: #38E54D;
+    color: #425F57;
 }
 
 ul {
