--- a/cheack word_JavaScript_Mini_Project/css/style.css
+++ b/cheack word_JavaScript_Mini_Project/css/style.css
@@ -4,11 +4,23 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #425F57;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 1rem;
+    color: #425F57;
+}
+
 .container {
     width: 30%;
     margin: 10rem auto;
-    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding: 3rem 2rem;
+    background-color: #fff;
 }
 
 .form-control {
